src/test/ui/borrowck/regions-escape-bound-fn.stderr
error: borrowed data cannot be stored outside of its closure
  --> $DIR/regions-escape-bound-fn.rs:18:27
   |
18 |     with_int(|y| x = Some(y));
   |              ---     -----^-
   |              |       |    |
   |              |       |    cannot be stored outside of its closure
   |              |       cannot infer an appropriate lifetime
   |              borrowed data cannot outlive this closure

error: aborting due to previous error

